تنفيذ المرحلة الرابعة دون اكمالها
